Experimental: First pass of datastore export to bigquery. Not yet ready for production use.

--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,7 @@
     <javac srcdir="${src}" destdir="${build}" includeantruntime="false" debug="true" debuglevel="lines,vars,source" source="1.5" target="1.5">
       <classpath>
         <fileset dir=".">
+          <include name="*.jar" />
           <include name="bigquery_libs/**/*.jar" />
         </fileset>
         <fileset dir="${gae_sdk}">
