Adds test case for #12 and properly fix it.
Fixes misuse of query predicates on previous commit of
BuiltinDatastoreToBigqueryIngesterTask, that was causing it to fail
backwards.

Also adds a new test case to the test suite so this can be
verified as fixed.

--- a/pom.xml
+++ b/pom.xml
@@ -56,8 +56,21 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>3.8.1</version>
+			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-api-stubs</artifactId>
+			<version>${appengine.target.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.google.appengine</groupId>
+			<artifactId>appengine-testing</artifactId>
+			<version>${appengine.target.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
 	</dependencies>
 </project>
