--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,28 @@
 	<name>Mache</name>
 	<url>https://github.com/StreakYC/mache</url>
 
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<name>Aleem Mawani</name>
+			<email>aleem@streak.com</email>
+			<organization>Streak</organization>
+			<organizationUrl>http://www.streak.com</organizationUrl>
+		</developer>
+	</developers>
+	<scm>
+		<connection>scm:git:git@github.com:StreakYC/mache.git</connection>
+		<developerConnection>scm:git:git@github.com:StreakYC/mache.git</developerConnection>
+		<url>git@github.com:StreakYC/mache.git</url>
+	</scm>
+
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<appengine.target.version>1.9.3</appengine.target.version>
