--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,10 @@
             <artifactId>joda-time</artifactId>
             <version>2.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.rewardly.mailfoo</groupId>
+            <artifactId>ServerCommon</artifactId>
+            <version>1</version>
+        </dependency>
     </dependencies>
 </project>
